<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BusPassForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nameheader">Name</string>
    <string name="addressheader">Address</string>
    <string name="passtype">Pass Type</string>
    <string name="passduration">Duration</string>
    <string name="fromdate">From Date</string>


    <string-array name="a_passtype">
        <item>Black Board</item>
        <item>Red Board</item>
        <item>Vajra</item>
    </string-array>

    <string-array name="a_passduration">
        <item>Daily</item>
        <item>Monthly</item>
    </string-array>

</resources>
