<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/t_nameheader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:textSize="15dp"
                android:text="@string/nameheader"/>

            <EditText
                android:id="@+id/e_custname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_weight="0.75" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t_addressheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="15dp"
            android:text="@string/addressheader"/>

        <EditText
            android:id="@+id/e_custaddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_weight="0.75" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t_passtype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="15dp"
            android:text="@string/passtype"/>

        <Spinner
            android:id="@+id/s_passtype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:textSize="15dp"
            android:entries="@array/a_passtype">
         </Spinner>

    </LinearLayout>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/t_passduration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:textSize="15dp"
        android:text="@string/passduration"/>

    <Spinner
        android:id="@+id/s_passduration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.75"
        android:textSize="15dp"
        android:entries="@array/a_passduration">
    </Spinner>

</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t_fromdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textSize="15dp"
            android:text="@string/fromdate"/>

        <EditText
            android:id="@+id/e_fromdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_weight="0.75" />

    </LinearLayout>

</LinearLayout>